index.html und registration.html angepasst

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Startseite</title>
+    <title>Jetzt registieren</title>
 </head>
 <body>
-    <h1>Willkommen zur Startseite!</h1>
+
 </body>
 </html>
