--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Startseite</title>
 </head>
 <body>
-
+    <h1>Willkommen zur Startseite!</h1>
 </body>
 </html>
