--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Willkommen bei ReGive</h1>
+    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
+    <h1>ReGive - Spenden statt entsorgen.</h1>
+    <p> Wir verbinden ungenutzte Rückgabeartikel aus dem Einkaufsschutz mit gemeinnützigen Organisationen.</p>
+    <p>So schaffen wir gesellschaftlichen Mehrwert und reduzieren Ressourcenverschwendung.</p>
     <div>
         <h2>Jetzt einloggen!</h2>
         <button>Login als Organisation</button>
