--- a/templates/registration_donor.html
+++ b/templates/registration_donor.html
@@ -5,6 +5,6 @@
     <title>Jetzt registieren</title>
 </head>
 <body>
-
+    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
 </body>
 </html>
