--- a/templates/suche.html
+++ b/templates/suche.html
@@ -21,19 +21,19 @@
 
         <div class="item-grid">
             <div class="item">
-                <img src="https://via.placeholder.com/150" alt="Kleid rot">
+                <img src="placeholder.jpg" alt="Kleid rot">
                 <p>Kleid rot<br>Erlangen</p>
             </div>
             <div class="item">
-                <img src="https://via.placeholder.com/150" alt="Kinderbuch">
+                <img src="placeholder.jpg" alt="Kinderbuch">
                 <p>Kinderbuch<br>Fürth</p>
             </div>
             <div class="item">
-                <img src="https://via.placeholder.com/150" alt="Plüschtier">
+                <img src="placeholder.jpg" alt="Plüschtier">
                 <p>Plüschtier<br>Erlangen</p>
             </div>
             <div class="item">
-                <img src="https://via.placeholder.com/150" alt="Damen T-Shirt">
+                <img src="placeholder.jpg" alt="Damen T-Shirt">
                 <p>Weißes Damen Tshirt<br>Nürnberg</p>
             </div>
         </div>
