--- a/templates/startseite.html
+++ b/templates/startseite.html
@@ -5,16 +5,16 @@
     <title>ReGive - Spenden statt entsorgen</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body id="startseite-page">
     <nav>
         <a href="{{ url_for('startseite') }}" class="active">Startseite</a>
         <a href="{{ url_for('suche') }}">Suche</a>
         <a href="{{ url_for('spenden') }}">Spenden</a>
         <a href="{{ url_for('einstellungen') }}">Einstellungen</a>
     </nav>
-
+    <div  id="startseite-page-logo">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
-
+    </div>
     <section>
         <h2>Willkommen bei ReGive</h2>
         <div class="card">
