--- a/templates/register_spender.html
+++ b/templates/register_spender.html
@@ -7,28 +7,28 @@
 </head>
 <body id="register-spender-page">
    <h1>Registrierung als Spender</h1>
-    <form>
-        <label for="spender-name">Name</label>
-        <br>
-        <input type="text" id="spender-name" name="spender-name" placeholder="Wert eingeben">
-        <br>
-        <label for="email">E-Mail</label>
-        <br>
-        <input type="email" id="email" name="email" placeholder="Wert eingeben">
-        <br>
-        <label for="passwort">Passwort</label>
-        <br>
-        <input type="password" id="passwort" name="passwort" placeholder="Wert eingeben">
-        <br>
-        <label for="password-repeat">Passwort wiederholen</label>
-        <br>
-        <input type="password" id="password-repeat" name="password-repeat" placeholder="Wert eingeben">
-        <br>
-        <label for="adresse">Adresse</label>
-        <br>
-        <input type="text" id="adresse" name="adresse" placeholder="Wert eingeben">
-        <br>
-        <button onclick="window.location.href='{{ url_for('startseite') }}'" type="submit">Registrierung abschließen</button>
+
+    {% if fehler %}
+      <p class="fehler">{{ fehler }}</p>
+    {% endif %}
+
+    <form method="POST">
+        <label for="name">Name</label><br>
+        <input type="text" id="name" name="name" placeholder="Wert eingeben" required><br>
+
+        <label for="email">E-Mail</label><br>
+        <input type="email" id="email" name="email" placeholder="Wert eingeben" required><br>
+
+        <label for="passwort">Passwort</label><br>
+        <input type="password" id="passwort" name="passwort" placeholder="Wert eingeben" required><br>
+
+        <label for="passwort-repeat">Passwort wiederholen</label><br>
+        <input type="password" id="passwort-repeat" name="passwort-repeat" placeholder="Wert eingeben" required><br>
+
+        <label for="adresse">Adresse</label><br>
+        <input type="text" id="adresse" name="adresse" placeholder="Wert eingeben" required><br>
+
+        <button type="submit">Registrierung abschließen</button>
     </form>
 
     <p class="register-spender-page-paragraph">Kein Spender?
