Plattform weiter programmiert

--- a/templates/login_organisation.html
+++ b/templates/login_organisation.html
@@ -7,7 +7,7 @@
 </head>
 <body id="login-org-page">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
-    <form>
+    <form method="post">
         <p>E-Mail-Adresse</p>
         <label>
             <input type="text" name="email" placeholder="E-Mail-Adresse eingeben" required>
