--- a/templates/einstellungen.html
+++ b/templates/einstellungen.html
@@ -10,7 +10,9 @@
         <a href="{{ url_for('startseite') }}">Startseite</a>
         <a href="{{ url_for('suche') }}">Suche</a>
         <a href="{{ url_for('spenden') }}">Spenden</a>
+        <a href="{{ url_for('meine_spenden') }}">Meine Spenden</a>
         <a href="{{ url_for('einstellungen') }}" class="active">Einstellungen</a>
+        <a href="{{ url_for('logout') }}">Logout</a>
     </nav>
 
         <div class="banner">
