--- a/templates/register_organisation.html
+++ b/templates/register_organisation.html
@@ -7,32 +7,26 @@
 </head>
 <body id="register-org-page">
     <h1>Registrierung als Organisation</h1>
-    <form>
-        <label for="org-name">Name der Organisation</label>
-        <br>
-        <input type="text" id="org-name" name="org-name" placeholder="Wert eingeben">
-        <br>
-        <label for="email">E-Mail</label>
-        <br>
-        <input type="email" id="email" name="email" placeholder="Wert eingeben">
-        <br>
-        <label for="password">Passwort</label>
-        <br>
-        <input type="password" id="password" name="password" placeholder="Wert eingeben">
-        <br>
-        <label for="password-repeat">Passwort wiederholen</label>
-        <br>
-        <input type="password" id="password-repeat" name="password-repeat" placeholder="Wert eingeben">
-        <br>
-        <label for="adresse">Adresse</label>
-        <br>
-        <input type="text" id="adresse" name="adresse" placeholder="Wert eingeben">
-        <br>
-        <label for="zertifikat">Zertifikat zur Authentifizierung</label>
-        <br>
-        <input type="file" id="zertifikat" name="zertifikat">
-        <br>
-        <button onclick="window.location.href='{{ url_for('startseite') }}'" type="submit">Registrierung abschließen</button>
+    <form method="post" enctype="multipart/form-data">
+        <label for="org-name">Name der Organisation</label><br>
+        <input type="text" id="org-name" name="org-name" placeholder="Wert eingeben" required><br>
+
+        <label for="email">E-Mail</label><br>
+        <input type="email" id="email" name="email" placeholder="Wert eingeben" required><br>
+
+        <label for="passwort">Passwort</label><br>
+        <input type="password" id="passwort" name="passwort" placeholder="Wert eingeben" required><br>
+
+        <label for="passwort-repeat">Passwort wiederholen</label><br>
+        <input type="password" id="passwort-repeat" name="passwort-repeat" placeholder="Wert eingeben" required><br>
+
+        <label for="adresse">Adresse</label><br>
+        <input type="text" id="adresse" name="adresse" placeholder="Wert eingeben" required><br>
+
+        <label for="zertifikat">Zertifikat zur Authentifizierung</label><br>
+        <input type="file" id="zertifikat" name="zertifikat"><br>
+
+        <button type="submit">Registrierung abschließen</button>
     </form>
 
     <p class="register-org-page-paragraph">Keine Organisation?
