--- a/templates/startseite.html
+++ b/templates/startseite.html
@@ -10,7 +10,9 @@
         <a href="{{ url_for('startseite') }}" class="active">Startseite</a>
         <a href="{{ url_for('suche') }}">Suche</a>
         <a href="{{ url_for('spenden') }}">Spenden</a>
+        <a href="{{ url_for('meine_spenden') }}">Meine Spenden</a>
         <a href="{{ url_for('einstellungen') }}">Einstellungen</a>
+        <a href="{{ url_for('logout') }}">Logout</a>
     </nav>
     <div  id="startseite-page-logo">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
