Plattform weiter programmiert

--- a/templates/login_organisation.html
+++ b/templates/login_organisation.html
@@ -18,5 +18,9 @@
         </label>
         <button type="submit">Login</button>
     </form>
+
+    {% if fehler %}
+        <p class="fehler-meldung" style="color: red;">{{ fehler }}</p>
+    {% endif %}
 </body>
 </html>
