--- a/templates/einstellungen.html
+++ b/templates/einstellungen.html
@@ -7,12 +7,22 @@
 </head>
 <body id="einstellungen-page">
     <nav>
-        <a href="{{ url_for('startseite') }}">Startseite</a>
+    <a href="{{ url_for('startseite') }}">Startseite</a>
+
+    {% if session.get('user_id') %}
         <a href="{{ url_for('suche') }}">Suche</a>
         <a href="{{ url_for('spenden') }}">Spenden</a>
         <a href="{{ url_for('meine_spenden') }}">Meine Spenden</a>
         <a href="{{ url_for('einstellungen') }}" class="active">Einstellungen</a>
+
+    {% elif session.get('org_id') %}
+        <a href="{{ url_for('zertifikate') }}">Zertifikate</a>
+        <a href="{{ url_for('einstellungen') }}" class="active">Einstellungen</a>
+    {% endif %}
+
+    {% if session.get('user_id') or session.get('org_id') %}
         <a href="{{ url_for('logout') }}">Logout</a>
+    {% endif %}
     </nav>
 
         <div class="banner">
