--- a/templates/startseite.html
+++ b/templates/startseite.html
@@ -7,12 +7,22 @@
 </head>
 <body id="startseite-page">
     <nav>
-        <a href="{{ url_for('startseite') }}" class="active">Startseite</a>
+    <a href="{{ url_for('startseite') }}" class="active">Startseite</a>
+
+    {% if session.get('user_id') %}
         <a href="{{ url_for('suche') }}">Suche</a>
         <a href="{{ url_for('spenden') }}">Spenden</a>
         <a href="{{ url_for('meine_spenden') }}">Meine Spenden</a>
         <a href="{{ url_for('einstellungen') }}">Einstellungen</a>
+
+    {% elif session.get('org_id') %}
+        <a href="{{ url_for('zertifikate') }}">Zertifikate</a>
+        <a href="{{ url_for('einstellungen') }}">Einstellungen</a>
+    {% endif %}
+
+    {% if session.get('user_id') or session.get('org_id') %}
         <a href="{{ url_for('logout') }}">Logout</a>
+    {% endif %}
     </nav>
     <div  id="startseite-page-logo">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
