--- a/templates/register_spender.html
+++ b/templates/register_spender.html
@@ -32,7 +32,7 @@
     </p>
 
     {% if fehler %}
-      <p class="fehler">{{ fehler }}</p>
+        <p class="error">{{ fehler }}</p>
     {% endif %}
 </body>
 </html>
