Plattform weiter programmiert

--- a/templates/einstellungen.html
+++ b/templates/einstellungen.html
@@ -51,8 +51,8 @@
         {% if session.get('org_id') %}
             <div class="card">
                 <h3>Organisation</h3>
-                <p><a href="{{ url_for('zertifikate') }}">Zertifikats-Upload & Übersicht</a></p>
             </div>
+            <p><a href="{{ url_for('zertifikate') }}">Zertifikat</a></p>
         {% endif %}
 
         <div class="card">
