--- a/templates/spenden.html
+++ b/templates/spenden.html
@@ -57,7 +57,7 @@
                     <option>Organisation2</option>
                 </select>
                 <select name="zahlungsmethode" required>
-                    <option value="">Organisation wählen</option>
+                    <option value="">Zahlungsmethode wählen</option>
                     <option>PayPal</option>
                     <option>Kreditkarte</option>
                 </select>
