--- a/static/style.css
+++ b/static/style.css
@@ -158,6 +158,35 @@ select {
     text-align: center;
     padding: 20px;
 }
+/* SUCHE.HTML */
+.item-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    text-align: center;
+  gap: 10px;
+  border: 2px solid #2e7d32;
+  border-radius: 8px;
+  padding: 15px;
+  margin-bottom: 30px;
+  background-color: #f9f9f9;
+  max-width: 300px;
+
+}
+
+.item img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 6px;
+  margin-bottom: 10px;
+}
 
 /* REGISTER_SPENDER.HTML */
 
@@ -231,6 +260,7 @@ select {
     padding: 5px;
     width: 800px;
 }
+
 /* SONSTIGES */
 .card {
     background-color: #f0f0f0;
@@ -245,6 +275,17 @@ select {
 
 .success { color: green; }
 .error { color: red; }
+
+
+.login-logo {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.login-logo img {
+  height: auto;
+  display: inline-block;
+}
 
 /* RESPONSIVE */
 @media screen and (max-width: 600px) {
