--- a/templates/login_spender.html
+++ b/templates/login_spender.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body id="login-spender-page">
-    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
+    <div class="login-logo">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo von ReGive">
+    </div>
 
     {% if fehler %}
         <p style="color: red;">{{ fehler }}</p>
